Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
+<title>BSA Troop 223</title>
+
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
 <h1>Welcome to Troop 223!</h1>
 
-  <hr>
-
+<hr>
+  
+<div class="left">
 <h5>
 
   Here in troop 223, we aim to help our scouts achieve all they can, all the way up to First Class. 
 <br>
-This is a troop whose aim is to help our Scouts, according to the scout oath and law, to achieve milestones in thier lives which 
-will prepair them for life as a responsible adult, to help them understand how to be conservation minded, and to to give them the skills to have an effective and proactive adult life.
+This is a troop whose aim is to help our Scouts, according to the scout oath and law, to achieve milestones 
+  <br>
+  in thier lives which 
+will prepair them for life as a responsible adult, to help them understand how 
+  <br>
+  to be conservation minded, and to to give them the skills to have an effective and proactive adult life.
 
 </h5>
 
@@ -29,9 +43,9 @@ will prepair them for life as a responsible adult, to help them understand how t
   <li>Swim test at the YMCA</li>
   <li>Prepairing for Summer Camp</li>
 </ul>  
-
+  </div>
+    
   <a href="https://troop223.github.io/NewsHub">MORE</a>
-</div>
 
 <hr>
 
