--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <a href="#about">About</a>
 </div>
 
-<h1>Welcome to Troop 223!</h1>
+<h1>Welcome to Troop 223</h1>
 
 <hr>
   
@@ -330,7 +330,8 @@ Or call:  423-355-4430
 body {
 
 text-align: center;
-
+margin: 0;
+font-family: Arial, Helvetica, sans-serif;
   
 }
 
@@ -354,7 +355,35 @@ text-align: left;
 
 
 
+.topnav {
+  overflow: hidden;
+  /*turns the background color on News, Contact, and about a color*/
+  background-color: #998887;
+  
+}
 
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
+.topnav a:hover {
+/* changes what color the background, text color when you hover over it*/
+  background-color: darkgrey;
+  color: white;
+}
+
+.topnav a.active {
+/*changes the color of the 'Home' background, text color, respectivly*/
+  background-color: #5e5453;
+  color: white;
+}
   
 </style>
+
+
+
