--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <a href="#ABOUT">About</a>
 </div>
 
-<h1>Welcome to Troop 223!</h1>
+<h1>Welcome to Troop 223</h1>
 
 <hr>
   
@@ -46,9 +46,11 @@ Latimer Scout Camp during Sunset
     <div id="ABOUT">
 <hr>
 
+      <h5>
 Troop 223 tries to offer at least once-monethly campouts to our scouts, in order for them to rapidly advance to the rank of 
 First Class
 
+      </h5>
 <hr> 
       
   <p>
