--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 
- <!-- V1.01-0/0 -->
+ <!-- V2.01-0/0 -->
  <!-- NOTE: All DIVs and thier closing tags are VERY necessary DO NOT delete -->
 
 <title>BSA Troop 223</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<div class="flexboxMain">
 <div class="topnav">
-  <a class="active" href="#HOME">Home</a>
+  <a class="active" href="https://troop223.github.io/">Home</a>
   <a href="https://troop223.github.io/NewsHub">News</a>
   <a href="#CONTACT">Contact</a>
   <a href="#ABOUT">About</a>
 </div>
-<div id="HOME">
 <h1>Welcome to Troop 223!</h1>
 	<hr>
 <div class="left">
