--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
- <!-- V3.01-0/0 -->
+ <!-- V3.02-0/0 -->
  <!-- NOTE: All DIVs and thier closing tags are VERY necessary DO NOT delete -->
 
 <title>BSA Troop 223</title>
@@ -12,7 +12,7 @@
   <a href="#CONTACT">Contact</a>
   <a href="#ABOUT">About</a>
 </div>
-<h1>Welcome to Troop 223!</h1>
+<h1>Welcome to Troop 223</h1>
 	<hr>
 <div class="left">
 <h5>
@@ -195,6 +195,7 @@ But what does it contain?</h5>
    <hr>
 Well like I just said, it contains a Scedule, Advancement log, and ways to achieve Requirements that will help them advance. some of the things it teaches are:
    <hr	
+	   
 <div class="UlLeft">
 <ul>
 <li>Lashings(Used for building sturdy structures in the woods)</li>
@@ -211,6 +212,7 @@ Well like I just said, it contains a Scedule, Advancement log, and ways to achie
 <li>First Aid</li>
 </ul>
 </div>
+
    <hr>
 All these tools and more are tought to Scouts, both by Adult leaders and Older Youth, and by the Scout book. 
 <br>
