--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
- <!-- V3.02-0/0 -->
+ <!-- V3.03-0/0 -->
  <!-- NOTE: All DIVs and thier closing tags are VERY necessary DO NOT delete -->
 
 <title>BSA Troop 223</title>
@@ -12,7 +12,7 @@
   <a href="#CONTACT">Contact</a>
   <a href="#ABOUT">About</a>
 </div>
-<h1>Welcome to Troop 223</h1>
+<h1>Welcome to Troop 223!</h1>
 	<hr>
 <div class="left">
 <h5>
@@ -197,6 +197,7 @@ Well like I just said, it contains a Scedule, Advancement log, and ways to achie
    <hr	
 	   
 <div class="UlLeft">
+		
 <ul>
 <li>Lashings(Used for building sturdy structures in the woods)</li>
 <li>Knots</li>
@@ -211,6 +212,7 @@ Well like I just said, it contains a Scedule, Advancement log, and ways to achie
 <li>Navigation</li>
 <li>First Aid</li>
 </ul>
+		
 </div>
 
    <hr>
