--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <div class="topnav">
   <a class="active" href="https://troop223.github.io/">Home</a>
   <a href="https://troop223.github.io/NewsHub">News</a>
-  <a href="#CONTACT">Contact</a>
-  <a href="#ABOUT">About</a>
+  <a href="https://troop223.github.io/#CONTACT">Contact</a>
+  <a href="https://troop223.github.io/#ABOUT">About</a>
+  <a href="https://troop223.github.io/UpdateLog">Update Log</a>
 </div>
 <h1>Welcome to Troop 223!</h1>
 	<hr>
