--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <a href="https://troop223.github.io/#ABOUT">About</a>
   <a href="https://troop223.github.io/UpdateLog">Update Log</a>
 </div>
+		
 <h1>Welcome to Troop 223!</h1>
 	<hr>
 <div class="left">
@@ -60,13 +61,11 @@ But what about Camping?
   <hr>
 As previously stated, we try to go camping at least once a month. our goal is to get the scouts to a proficiant rank, while still having fun. The Troop goes to a variety of locations, including State parks, Private camp sites, and Scout camps, and in addition we try to get the scouts aquainted to a variety of locations and conditions, including rain, snow, heat and PAIN!  All jokes aside though, we try to get the scouts as prepaired as possible while still having fun. some of our activities on trips include: Rapelling, biking, hiking, canoeing, shooting and much, much, more!
   <hr>
-<h4>Upcoming events and trips for the month of May</h4> 
+<h4>Upcoming events and trips for the month of june</h4> 
   <hr>
   <div class="UlLeft">
 <ul>
-<li>5/18/24 - Caving day trip -Completed</li>
-<li>5/25/24 - Placing Flags at a National cemetary and an Eagle Ceremony -Completed</li>
-<li>6/9/24 - Leaving for Summer Camp</li>
+<li>6/9/24 - Leaving for Summer Camp -completed</li>
 </ul>
   </div>
 <a href="https://troop223.github.io/UpcomingEventsHub">MORE</a>
@@ -75,9 +74,9 @@ As previously stated, we try to go camping at least once a month. our goal is to
   <hr>
  <div class="UlLeft">
 <ul>
-<li>06/06/24 - Scout Skills (Know tying, etc) - 7:00 PM - 8:30 PM</li>
-<li>05/30/24 - YMCA swim test - 7:00 PM - 8:30 PM</li>
-<li>05/23/24 - Life Skills (Money management, Proper Nutrition, etc) - 7:00 PM - 8:30 PM</li>
+<li>06/20/24 - Meeting cancelled</li>
+<li>06/27/24 - PLC</li>
+<li>07/04/24 - Undecided</li>
 </ul>
   </div>
 <a href="https://troop223.github.io/SiteOfficialTestGround.github.io/MeetingPlansHub">MORE</a>
