--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ But what about Camping?
   <hr>
 As previously stated, we try to go camping at least once a month. our goal is to get the scouts to a proficiant rank, while still having fun. The Troop goes to a variety of locations, including State parks, Private camp sites, and Scout camps, and in addition we try to get the scouts aquainted to a variety of locations and conditions, including rain, snow, heat and PAIN!  All jokes aside though, we try to get the scouts as prepaired as possible while still having fun. some of our activities on trips include: Rapelling, biking, hiking, canoeing, shooting and much, much, more!
   <hr>
-<h4>Upcoming events and trips for the month of june</h4> 
+<h4>Previous and Upcoming Trips</h4> 
   <hr>
   <div class="UlLeft">
 <ul>
