--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ As previously stated, we try to go camping at least once a month. our goal is to
 <li>6/9/24 - Leaving for Summer Camp -completed</li>
 </ul>
   </div>
-<a href="https://troop223.github.io/UpcomingEventsHub">MORE</a>
+<a href="https://troop223.github.io/prev+furureTrips/">MORE</a>
   <hr>
 <h4>Upcoming Meeting plans</h4>
   <hr>
