--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <a href="https://troop223.github.io/NewsHub">News</a>
   <a href="https://troop223.github.io/#CONTACT">Contact</a>
   <a href="https://troop223.github.io/#ABOUT">About</a>
-  <a href="https://troop223.github.io/UpdateLog">Update Log</a>
+  <a href="https://troop223.github.io/prev+futureTrips">Trips</a>	
+  <a href="https://troop223.github.io/UpdateLog">Update Log</a>	
 </div>
 		
 <h1>Welcome to Troop 223!</h1>
