--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@ Thats why its important to get the proper items for scouting, as it is both cruc
    <hr>
  <!-- NOTE: These Div closers are VERY necessary DO NOT delete -->
   </div> 
+
+<div class="overitem overCONTACT">
+
+</div>
+
 	<div class="ContactCOLOR">
   <div class="flexbox-item flexbox-CONTACT">
 <h6>
