--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
- <!-- V5.02-0/0 -->
+ <!-- V5.03-0/0 -->
  <!-- NOTE: All DIVs and thier closing tags are VERY necessary DO NOT delete -->
 
 <title>BSA Troop 223</title>
@@ -311,10 +311,21 @@ text-align: left;
 
 .flexbox-CONTACT {
 
-  min-height: 40px;
+  min-height: 500px;
   
 }
-  
+.overitem {
+
+width: 100%;
+background-color: #2b2b2e;
+	
+}	
+.overCONTACT {
+
+  min-height: 40px;
+	
+}
+	
   .ContactCOLOR{
   
   color: grey;
