--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
- <!-- V5.03-0/0 -->
+ <!-- V5.04-0/0 -->
  <!-- NOTE: All DIVs and thier closing tags are VERY necessary DO NOT delete -->
 
 <title>BSA Troop 223</title>
@@ -306,7 +306,7 @@ text-align: left;
 
     width: 100%;
     background-color: #2b2b2e;
-
+    margin: 0%;
   }
 
 .flexbox-CONTACT {
@@ -318,11 +318,11 @@ text-align: left;
 
 width: 100%;
 background-color: #2b2b2e;
-	
+margin: 0%;
 }	
 .overCONTACT {
 
-  min-height: 40px;
+  min-height: 60px;
 	
 }
 	
