--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@ Thats why its important to get the proper items for scouting, as it is both cruc
 
 	<div class="ContactCOLOR">
   <div class="flexbox-item flexbox-CONTACT">
+<div class="ContInfo"
 <h6>
     <div id="CONTACT">
   questions or comments? please email us at:  <br>
@@ -243,8 +244,9 @@ Thats why its important to get the proper items for scouting, as it is both cruc
 Or call:  423-355-4430
   </p>
   </h6>
- <!-- NOTE: These Div closers are VERY necessary DO NOT delete -->
+    </div>
   </div>
+ <!-- NOTE: These Div closers are VERY necessary DO NOT delete -->
   </div>
 </div>
 <style>
