--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
- <!-- V5.05-0/0 -->
+ <!-- V6.00-0/0 -->
  <!-- NOTE: All DIVs and thier closing tags are VERY necessary DO NOT delete -->
 
 <title>BSA Troop 223</title>
@@ -354,11 +354,13 @@ width: auto;
 height: auto;
 	
 }	
+.ContInfo {
 
+padding-top: 50px;
+
+}
 	
 </style>
-
-
 
 
 
