--- a/index.html
+++ b/index.html
@@ -193,8 +193,10 @@ Thats why its important to get the proper items for scouting, as it is both cruc
  <!-- NOTE: These Div closers are VERY necessary DO NOT delete -->
   </div> 
 
+<div class="comments">
 <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 <div class="elfsight-app-2a533fb3-0228-48eb-b412-7c13b6d35e1e" data-elfsight-app-lazy></div>
+</div>
 
 <div class="overitem overCONTACT">
 
@@ -242,6 +244,12 @@ font-family: Arial, Helvetica, sans-serif;
 padding-left: 30%
 padding-right: 30%
   
+}
+
+comments{
+
+text-align: center;
+	
 }
 
 .UlLeft {
