--- a/index.html
+++ b/index.html
@@ -193,9 +193,8 @@ Thats why its important to get the proper items for scouting, as it is both cruc
  <!-- NOTE: These Div closers are VERY necessary DO NOT delete -->
   </div> 
 
-
-<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-<div class="elfsight-app-2a533fb3-0228-48eb-b412-7c13b6d35e1e" data-elfsight-app-lazy></div>
+<!-- This is the comment section code -->
+<script id="superflowToolbarScript" data-sf-platform="manual" async src="https://cdn.velt.dev/lib/superflow.js?apiKey=TJdcLg3rci7evLBaa9KO&projectId=5148372815417307"></script>
 
 
 <div class="overitem overCONTACT">
