--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Thats why its important to get the proper items for scouting, as it is both cruc
   </div> 
 
 <!-- This is the comment section code -->
-<div class=“powr-comments” id=“face3d6e_1723391455”></div><script src=“https://www.powr.io/powr.js?platform=html”></script>
+<div class="powr-comments" id="face3d6e_1723391455"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
 
 <div class="overitem overCONTACT">
 
