--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <a href="https://troop223.github.io/prev+futureTrips">Trips</a>
   <a href="https://troop223.github.io/MeetingPlansHub">Meetings</a>	
   <a href="https://troop223.github.io/UpdateLog">Update Log</a>	
+  <a href="https://troop223.github.io/#Comment">Comment</a>
 </div>
 		
 <h1>Welcome to Troop 223!</h1>
@@ -193,9 +194,11 @@ Thats why its important to get the proper items for scouting, as it is both cruc
  <!-- NOTE: These Div closers are VERY necessary DO NOT delete -->
   </div> 
 
+	<div id="Comment">
 <!-- This is the comment section code -->
 <div class="powr-comments" id="23a3a399_1723394210"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
-
+	</div>
+	
 <div class="overitem overCONTACT">
 
 
