--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 </div>
 
 <div class="UlLeft">
+<div class="Cmnt">
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
 </div>
-	
+</div>
+
 <title>BSA Troop 223</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<div class="flexboxMain">	
