--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
- <!-- V8.00-0/0 -->
+ <!-- V9.00-0/0 -->
  <!-- NOTE: All DIVs and thier closing tags are VERY necessary DO NOT delete -->
 
 <div id="mySidenav" class="sidenav">
@@ -399,6 +399,8 @@ padding-top: 50px;
   .sidenav a {font-size: 18px;}
 }	
 
+.Cmnt {float: left;}
+
 </style>
 
 <!-- This is where the CSS stops and JS starts -->
@@ -412,6 +414,11 @@ function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
 }
 </script>
+
+
+
+
+
 
 
 
