--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
- <!-- V9.00-0/0 -->
+ <!-- V10.01-0/0 -->
  <!-- NOTE: All DIVs and thier closing tags are VERY necessary DO NOT delete -->
 
 <div id="mySidenav" class="sidenav">
@@ -25,8 +25,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<div class="flexboxMain">	
 
-		
+ <div class="SpecifCenter">
 <h1>Welcome to Troop 223!</h1>
+ </div>
+	
 	<hr>
 <div class="left">
 <h5>
@@ -401,6 +403,8 @@ padding-top: 50px;
 
 .Cmnt {float: left;}
 
+.SpecifCenter {text-align: center;}
+	
 </style>
 
 <!-- This is where the CSS stops and JS starts -->
