--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<div class="flexboxMain">	
 
+<!-- NOTE:	'SpecifCenter' uses the 'float' CSS property and is used as a div next to another div	-->
  <div class="SpecifCenter">
 <h1>Welcome to Troop 223!</h1>
  </div>
@@ -403,7 +404,7 @@ padding-top: 50px;
 
 .Cmnt {float: left;}
 
-.SpecifCenter {text-align: center;}
+.SpecifCenter {float: center;}
 	
 </style>
 
