--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="https://troop223.github.io/">Home</a>
-  <a href="https://troop223.github.io/#Comment">Comment</a>
+  <a href="https://troop223.github.io/#Comment">Post</a>
   <a href="https://troop223.github.io/ABOUT">About</a>	
   <a href="https://troop223.github.io/#CONTACT">Contact</a>
   <a href="https://troop223.github.io/MeetingPlansHub">Meetings</a>
