--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 
 
-<span style="font-size:30px; Menu</span>
+<span style="font-size:30px;cursor:pointer"onclick="openNav()">&#9776;Menu</span>
 
 
 <title>BSA Troop 223</title>
