--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <a href="https://troop223.github.io/ABOUT">About</a>	
   <a href="https://troop223.github.io/#CONTACT">Contact</a>
   <a href="https://troop223.github.io/MeetingPlansHub">Meetings</a>
-  <a href="https://troop223.github.io/prev+futureTrips">Trips</a>
+  <a href="https://troop223.github.io/TripsHub/prevNfutrPlans.html">Trips</a>
   <a href="https://troop223.github.io/NewsHub">News</a>
   <a href="https://troop223.github.io/UpdateLog">Updates</a>
 </div>
