--- a/TripsHub/prevNfutrPlans.html
+++ b/TripsHub/prevNfutrPlans.html
@@ -2,7 +2,7 @@
 
 <hr>
 
-<h3>Future Trips</h3>
+<h3>Futuree Trips</h3>
 
 <hr>
 <table>
@@ -147,7 +147,7 @@
  </tr>
 </table>
 
-
+</tr>
 
 <style>
 
