--- a/TripsHub/prevNfutrPlans.html
+++ b/TripsHub/prevNfutrPlans.html
@@ -2,7 +2,7 @@
 
 <hr>
 
-<h3>Futuree Trips</h3>
+<h3>Future Trips</h3>
 
 <hr>
 <table>
@@ -146,8 +146,6 @@
   </th>
  </tr>
 </table>
-
-</tr>
 
 <style>
 
