--- a/TripsHub/prevNfutrPlans.html
+++ b/TripsHub/prevNfutrPlans.html
@@ -1,5 +1,23 @@
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="https://troop223.github.io/">Home</a>
+  <a href="https://troop223.github.io/#Comment">Post</a>
+  <a href="https://troop223.github.io/Menu/ABOUT.html">About</a>
+  <a href="https://troop223.github.io/#CONTACT">Contact</a>
+  <a href="https://troop223.github.io/Menu/Meeting_Plans.html">Meetings</a>
+  <a href="https://troop223.github.io/TripsHub/prevNfutrPlans.html">Trips</a>
+  <a href="https://troop223.github.io/Menu/UpdateLog.html">Updates</a>
+</div>
 <div class="main">
+  <div class="logounion">
+<div class="menulogo">
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu </span>
+</div>
+<div class="logo">
 <h2>Here is a list of all Previous and Future trips Troop 223 has/will go on, since late 2023 </h2>
+ </div>
+</div>
+
 
 <hr>
 
@@ -194,8 +212,73 @@ padding: 42px 143px 42px 143px;
 
 
 }
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
 
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+	
+.logounion {
+  display: flex;
+}
+.logounion > div {
+  width:33%;
+}
 </style>
+
+<!-- This is where the CSS stops and JS starts -->
+
+
+<script>
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+  document.getElementById("main").style.marginLeft= "0";
+}
+</script>
+
   
 
 
