--- a/TripsHub/prevNfutrPlans.html
+++ b/TripsHub/prevNfutrPlans.html
@@ -9,12 +9,26 @@
 
 <hr>
 <table>
+<!-- Copy and paste the template below -->
+<!--
+ 
+ <tr>
+  <td>Date</td>
+  <td>Location</td>
+  <td>Description</td>
+</tr>
 
+ -->
+<!--  -->
 <tr>
   <th>Date</th>
   <th>Location</th>
   <th>Description</th>
 </tr>
+<!-- Paste template here -->
+
+
+ 
  <tr>
   <td>01/24-26/2025</td>
   <td>Skymont Scout Camp</td>
