Update and rename ABOUT.md to ABOUT.html

--- a/Menu/ABOUT.html
+++ b/Menu/ABOUT.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
+<h3> <a href="https://troop223.github.io"> << Back</a> </h3>
 <h1>About</h1>
 This is the website of Troop 223 of Cherokee Area Council, Located in Chattanooga TN. <br>
 This site is currently run by our former WebMaster, Patrol Leader, and Troop Guide, Zephyr C.<br>
@@ -49,5 +50,12 @@ height: auto;
 
 text-align: center;}
 	
+.main {
+
+
+padding: 42px 143px 42px 143px;
+
+
+}
 
 </style>
