Update and rename UpdateLog.md to UpdateLog.html

--- a/Menu/UpdateLog.html
+++ b/Menu/UpdateLog.html
@@ -1,8 +1,17 @@
 <!-- V3.00-0/0 -->
-
+<div class="backleft">
+<div class="backlink"><a href="https://troop223.github.io"><< Back</a></div>
+</div>
+	
 <h1>UPDATE LOG</h1>
   <hr>
   <ul>
+    <li>signed my name at bottem of all pages I coded</li>
+    <li>changed majority of files with site content from 'html' to 'md'(markdown)</li>
+    <li>added a 'webmasters guide' to menu</li>
+    <li>made the internal structure of site way more easy to navigate in github</li>
+    <li>removed the 'news' page from site, but left it in github files in case of revival project</li>
+    <li>added a modified menu bar</li>
     <li>added a side navigation bar on the main page</li>
     <li>Added a Comment Section</li>	  
     <li>Fixed several spelling errors in the 'Meeting Plans' hub</li>
@@ -58,5 +67,20 @@ text-align: center;
 
 }
   
+body {
 
+padding: 42px 143px 42px 143px;
+text-align: center;
+
+}
+.backlink {
+
+font-size: 20px; 
+ 
+}
+.backleft {
+
+text-align: left;
+
+}
 </style>
