--- a/TripsHub/prevNfutrPlans.html
+++ b/TripsHub/prevNfutrPlans.html
@@ -1,3 +1,7 @@
+<div class="backleft">
+<div class="backlink"><a href="https://troop223.github.io"><< Back</a></div>
+</div
+
 <h2>Here is a list of (most) Previous and Future trips Troop 223 has/will go on, since late 2023</h2>
  <br>
 (NOTE: Troop 223 goes on at least one camping trip a month, however some discrepencies such as unrecorded dates and leaps in time occasionally occur due to human error)
@@ -176,6 +180,15 @@ tr:nth-child(even) {
 
 padding: 42px 143px 42px 143px;
 
+
+.backlink {
+
+font-size: 20px; 
+ 
+}
+.backleft {
+
+text-align: left;
 
 }
 
