--- a/TripsHub/prevNfutrPlans.html
+++ b/TripsHub/prevNfutrPlans.html
@@ -1,6 +1,8 @@
 <div class="backleft">
-<div class="backlink"><a href="https://troop223.github.io"><< Back</a></div>
-</div
+<div class="backlink">
+ <a href="https://troop223.github.io"><< Back</a>
+</div>
+</div>
 
 <h2>Here is a list of (most) Previous and Future trips Troop 223 has/will go on, since late 2023</h2>
  <br>
