--- a/Menu/UpdateLog.html
+++ b/Menu/UpdateLog.html
@@ -5,6 +5,7 @@
 	
 <h1>UPDATE LOG</h1>
   <hr>
+<div class="mainleft">
   <ul>
     <li>signed my name at bottem of all pages I coded</li>
     <li>changed majority of files with site content from 'html' to 'md'(markdown)</li>
@@ -20,7 +21,7 @@
     <li>Made site Mobil-Friendly</li>
     <li>Made Contact section much Nicer</li>
   </ul>
-
+</div>
   <br>
   Article by: <em> - Zephyr Carter.</em>
   
@@ -82,5 +83,10 @@ font-size: 20px;
 
 text-align: left;
 
+}
+.mainleft {
+
+text-align: left;
+	
 }
 </style>
