--- a/Menu/Meeting_Plans.html
+++ b/Menu/Meeting_Plans.html
@@ -62,23 +62,23 @@
   </tr>
    <tr>
     <td>01/30/2025</td>
-    <td>To be decided</td>
-    <td>To be decided</td>
+    <td>PLC (Patrol Leader's Council) Leadership attending only</td>
+    <td>7:00 PM - 8:00 PM</td>
   </tr>
    <tr>
     <td>01/23/2025</td>
-    <td>To be decided</td>
-    <td>To be decided</td>
+    <td>>Map and compass skills leading up to Orienteering Merit Badge</td>
+    <td>7:00 PM - 8:30 PM</td>
   </tr>
   <tr>
     <td>01/16/2025</td>
-    <td>To be decided</td>
-    <td>To be decided</td>
+    <td>Map and compass skills leading up to Orienteering Merit Badge</td>
+    <td>7:00 PM - 8:30 PM</td>
   </tr>
   <tr>
     <td>01/09/2025</td>
-    <td>To be decided</td>
-    <td>To be decided</td>
+    <td>Map and compass skills leading up to Orienteering Merit Badge</td>
+    <td>7:00 PM - 8:30 PM</td>
   </tr>
   <tr>
     <td>01/02/2025</td>
