--- a/Menu/Meeting_Plans.html
+++ b/Menu/Meeting_Plans.html
@@ -82,8 +82,8 @@
   </tr>
   <tr>
     <td>01/02/2025</td>
-    <td>To be decided</td>
-    <td>To be decided</td>
+    <td>Info is MIA</td>
+    <td>Info is MIA</td>
   </tr>
 
 </table>
