--- a/Menu/Meeting_Plans.html
+++ b/Menu/Meeting_Plans.html
@@ -62,7 +62,7 @@
   </tr>
    <tr>
     <td>01/30/2025</td>
-    <td>PLC (Patrol Leader's Council) Leadership attending only</td>
+    <td>PLC (Patrol Leader's Conference) Leadership attending only</td>
     <td>7:00 PM - 8:00 PM</td>
   </tr>
    <tr>
