--- a/Menu/UpdateLog.html
+++ b/Menu/UpdateLog.html
@@ -7,6 +7,7 @@
   <hr>
 <div class="mainleft">
   <ul>
+    <li>Passowrd protected Webmasters Guide</li>	  
     <li>signed my name at bottem of all pages I coded</li>
     <li>changed majority of files with site content from 'html' to 'md'(markdown)</li>
     <li>added a 'webmasters guide' to menu</li>
