--- a/Menu/Webmasters_Guide/Alt_Pswrd_Webmasters_Guide_Username.html
+++ b/Menu/Webmasters_Guide/Alt_Pswrd_Webmasters_Guide_Username.html
@@ -28,7 +28,7 @@
     function fun() {
         let inputPswd = document.getElementById("validate")
                                 .value;
-        let correctPswd = "w318778";
+        let correctPswd = "Big_Ponies";
         if (inputPswd === correctPswd) {
             document.getElementById("container")
                 .style.display = "block";
