--- a/Menu/Webmasters_Guide/Alt_Pswrd_Webmasters_Guide_Username.html
+++ b/Menu/Webmasters_Guide/Alt_Pswrd_Webmasters_Guide_Username.html
@@ -13,7 +13,7 @@
 <h2>Username</h2>
 <form id="pswd">
     <input type="password" id="validate" 
-           placeholder="Enter Password">
+           placeholder="Enter Username">
     <button type="button" onclick="fun()">Submit</button>
 </form>
 <div id="container">
