--- a/Menu/Webmasters_Guide/Alternate_Password_Webmasters_Guide.html
+++ b/Menu/Webmasters_Guide/Alternate_Password_Webmasters_Guide.html
@@ -21,7 +21,7 @@
     
     <hr>
     
-    <h3> <a href="https://troop223.github.io/Menu/Webmasters_Guide/Webmasters_Guide.html">Click here to Webmasters Guide >></a>
+    <h3> <a href="https://troop223.github.io/Menu/Webmasters_Guide/Webmasters_Guide.html">Click here to Webmaster's Guide >></a>
 </h3>
 </div>
 <script>
