--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <a href="https://troop223.github.io/#CONTACT">Contact</a>
   <a href="https://troop223.github.io/Menu/Meeting_Plans.html">Meetings</a>
   <a href="https://troop223.github.io/TripsHub/prevNfutrPlans.html">Trips</a>
-  <a href="https://troop223.github.io/Menu/Webmasters_Guide/Alt_Pswrd_Webmasters_Guide_Username.html">Webmasters-Guide</a>
+  <a href="https://troop223.github.io/Menu/Webmasters_Guide/Alt_Pswrd_Webmasters_Guide_Username.html">Webmaster's-Guide</a>
   <a href="https://troop223.github.io/Menu/UpdateLog.html">Updates</a>
 </div>
 
