--- a/Menu/UpdateLog.html
+++ b/Menu/UpdateLog.html
@@ -7,6 +7,8 @@
   <hr>
 <div class="mainleft">
   <ul>
+    <li>Moved 'Trips' folder into 'Menu' folder</li>	  
+    <li>Renamed 'TripsHub' folder to just 'Trips'</li>
     <li>Added custom Username to password protection</li>
     <li>Passowrd protected Webmasters Guide</li>	  
     <li>signed my name at bottem of all pages I coded</li>
