--- a/Menu/UpdateLog.html
+++ b/Menu/UpdateLog.html
@@ -7,6 +7,7 @@
   <hr>
 <div class="mainleft">
   <ul>
+    <li>Updated outdated instructions in 'Webmaster's Guide' file</li>
     <li>Moved 'Trips' folder into 'Menu' folder</li>	  
     <li>Renamed 'TripsHub' folder to just 'Trips'</li>
     <li>Added custom Username to password protection</li>
