--- a/Menu/Trips/prevNfutrPlans.html
+++ b/Menu/Trips/prevNfutrPlans.html
@@ -40,10 +40,20 @@
   <td>Skymont Scout Camp</td>
   <td>A trip to Skymont where Scouts and guests will stay in Scout lodge, with a Patrol cook-off later on. Go Big Ponies! (and rest of Troop 223 and 1223, of course!:>)</td>
 </tr>
+  <tr>
+  <td>01/23/2025</td>
+  <td>To be decided</td>
+  <td>Potential date of five mile hike for orienteering Merit badge</td>
+</tr>
  <tr>
   <td>01/18/2025</td>
   <td>Frick's Cave</td>
   <td>An EXCLUSIVE trip only available to those who volunteer on 01/11/2025</td>
+</tr>
+  <tr>
+  <td>01/16/2025</td>
+  <td>To be decided</td>
+  <td>Potential date of five mile hike for orienteering Merit badge</td>
 </tr>
  <tr>
   <td>01/11/2025</td>
