--- a/Menu/Webmasters_Guide/Alt_Pswrd_Webmasters_Guide_Username.html
+++ b/Menu/Webmasters_Guide/Alt_Pswrd_Webmasters_Guide_Username.html
@@ -17,11 +17,11 @@
     <button type="button" onclick="fun()">Submit</button>
 </form>
 <div id="container">
-    <h2>Username is Correct</h2>
+    <h2>Username Correct</h2>
     
     <hr>
     
-    <h3> <a href="https://troop223.github.io/Menu/Webmasters_Guide/Alternate_Password_Webmasters_Guide.html">Click here >></a>
+    <h3> <a href="https://troop223.github.io/Menu/Webmasters_Guide/Alternate_Password_Webmasters_Guide.html">Continue >></a>
 </h3>
 </div>
 <script>
