--- a/Menu/Trips/prevNfutrPlans.html
+++ b/Menu/Trips/prevNfutrPlans.html
@@ -1,3 +1,7 @@
+<head>
+ <link rel="stylesheet" href="Styles.css">
+</head>
+
 <div class="backleft">
 <div class="backlink">
  <a href="https://troop223.github.io"><< Back</a>
