--- a/Menu/ABOUT.html
+++ b/Menu/ABOUT.html
@@ -1,4 +1,7 @@
 <!-- NOTE: All DIVs and thier closing tags are VERY necessary DO NOT delete -->
+<head>
+ <link rel="stylesheet" href="Styles.css">
+</head>
 
 <title>BSA Troop 223</title>
 
