--- a/Menu/UpdateLog.html
+++ b/Menu/UpdateLog.html
@@ -1,4 +1,7 @@
 <!-- V3.00-0/0 -->
+<head>
+ <link rel="stylesheet" href="Styles.css">
+</head>
 <div class="backleft">
 <div class="backlink"><a href="https://troop223.github.io"><< Back</a></div>
 </div>
