--- a/Menu/Trips/prevNfutrPlans.html
+++ b/Menu/Trips/prevNfutrPlans.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
  <link rel="stylesheet" href="Styles.css">
 </head>
-
+<body>
+ 
 <div class="backleft">
 <div class="backlink">
  <a href="https://troop223.github.io"><< Back</a>
@@ -144,10 +147,11 @@
 
 </div>
 
-<style>
-
     </div>
 
+ </Body>
+ </html>
+<style>
 
 .links {
 
