--- a/Menu/ABOUT.html
+++ b/Menu/ABOUT.html
@@ -1,9 +1,12 @@
 <!-- NOTE: All DIVs and thier closing tags are VERY necessary DO NOT delete -->
+<!DOCTYPE html>
+<html lang="en">
 <head>
  <link rel="stylesheet" href="Styles.css">
+ <title>BSA Troop 223</title
 </head>
+<body>
 
-<title>BSA Troop 223</title>
 
 <div class="backleft">
 <div class="backlink"><a href="https://troop223.github.io"><< Back</a></div>
@@ -24,7 +27,9 @@ Yours truly, Zephyr.
 
 <br>
 Article by: <em> - Zephyr Carter.</em>
-
+</Body> 
+</html>
+ 
 <style>
 
 body {
