--- a/Menu/Meeting_Plans.html
+++ b/Menu/Meeting_Plans.html
@@ -1,6 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
  <link rel="stylesheet" href="Styles.css">
+ <title>Meeting Plans</title>
 </head>
+<body>
+ 
 <div class="backleft">
 <div class="backlink"><a href="https://troop223.github.io"><< Back</a></div>
 </div>
@@ -241,7 +246,8 @@
 Article by: <em> - Zephyr Carter. </em>
 <hr>
 
-
+</Body>
+</html>
 
 <style>
   
