--- a/Menu/ABOUT.html
+++ b/Menu/ABOUT.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
  <link rel="stylesheet" href="Styles.css">
- <title>BSA Troop 223</title
+ <title>Troop 223 About</title
 </head>
 <body>
 
